--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Stopwatch</string>
-    <string name="startButtonTitle">start</string>
+    <string name="start">start</string>
     <string name="stop">Stop</string>
     <string name="startTimer">0:00:00</string>
+    <string name="pause">pause</string>
 </resources>
